# Bartek

./: CMakeLists.txt  Zadanie glowne 1 Czarodzieje.c  azd głóne Orion one.c  rozgrzewka 1.c  rozgrzewka 3.c  rozgrzewka 4 .c  rozgrzewka 5 .c  rozgrzewka 5 kawka.c  rozgrzewka 6  automat do kawy.c  rozgrzewka 7.3.c  rozgrzewka 8.c  testsss.c  wprawka 2.c  wprowadzenie rozgrzewka 7.2  wprowadzenie rozgrzewka 7.2.c  zad 4.c  zad 9.c  zad głowne 100.c  zadania 1 rozgrzewka 1.c  zadanie 1 rozgrzewka.c  zadanie główne 2 Orion ONE.c  zadanie główne 3.c
