cmake_minimum_required(VERSION 4.0)
project(CProject)

set(CMAKE_CXX_STANDARD 20)

add_executable(CProject
        "zadania 1 rozgrzewka 1.c"
        "Zadanie glowne 1 Czarodzieje.c"
        test.c
        "zadanie główne 2 Orion ONE.c"
        "zadanie główne 3 Orion One.c"
        "rozgrzewka 1.c"
        "rozgrzewka 2.c"
        "rozgrzewka 3.c"
        "rozgrzewka 4 .c"
        "wprawka 1.c"
        "wprawka 2.c"
        "wprawka 3.c"
        "wprawka 4.c"
        "zadanie główne 1.c"
        "zadanie główne 2.c"
        "zadanie główne 3.c"
        "azd głóne Orion one.c"
        testsss.c
        "rozgrzewka 5 .c"
        "rozgrzewka 5 kawka.c"
        "rozgrzewka 6  automat do kawy.c"
        "rozgrawka 7 kryształy.c"
        "wprowadzenie rozgrzewka 7.2.c"
        "rozgrzewka 7.3.c"
        "zad 4.c"
        "rozgrzewka 8.c"
        "zad 9.c"
        "zadanie 1 rozgrzewka.c"
        "zad głowne 100.c"
)
